Update Node.js installation in Dockerfile to use NodeSource setup script

--- a/images/Dockerfile
+++ b/images/Dockerfile
@@ -90,7 +90,9 @@ RUN sudo apt update \
 
 # Install Node.js via APT package manager for stability
 RUN sudo apt update \
-    && sudo apt install -y nodejs npm \
+    && sudo apt install -y curl \
+    && curl -fsSL https://deb.nodesource.com/setup_22.x | -E bash - \
+    && sudo apt install -y nodejs \
     && npm install -g pnpm yarn \
     && node --version \
     && npm --version \
